Refactored testing targets